--- a/app/partials/bio.html
+++ b/app/partials/bio.html
@@ -1,5 +1,5 @@
 <div class="span10" style="margin-top:1em;">
     <p>Born on a mountain-top in Tennessee, greenest state in the land of the free.</p>
-    <p>Born in the wooods, so he knew every tree.</p>
+    <p>Born in the woods, so he knew every tree.</p>
     <p>Killed a bear, when he was only three.</p>
 </div>
