--- a/app/partials/bio.html
+++ b/app/partials/bio.html
@@ -1,3 +1,5 @@
+<h4 class="fl cb uc">Under Construction</h4>
+
 <div class="row-fluid" style="margin-top:3em;">
 
     <img src="/app/img/jpn2.png" class="img-rounded img-polaroid span3 fl cl" alt="Jason Nerothin"/>
