--- a/app/partials/bio.html
+++ b/app/partials/bio.html
@@ -1,60 +1,53 @@
-<h4 class="fl cb uc">Under Construction</h4>
+<div class="fl cb row-fluid lead" style="margin-top:1.5em">
 
-<div class="row-fluid" style="margin-top:3em;">
-
-    <img src="/app/img/jpn2.png" class="img-rounded img-polaroid span3 fl cl" alt="Jason Nerothin"/>
-
-    <div class="fl cr row-fluid span6 offset1 lead">
-        <p>
-            Jason was born in the mid-1970s, in rural mid-Minnesota, the first-born child of a physician and nurse.
-            A sister and brother came 2 and 5 years later on.
-        </p>
-
-        <p>
-            Jason matriculated to St.Olaf College where he pursued a number of interesting studies - music,
-            German, biology. He spent the summer between junior and senior years at the University of Minnesota in
-            the crystallography lab of <a href="javascript:void(0)"
-                                          onclick="popout('http://www.linkedin.com/pub/len-banaszak/16/583/bb7')">
-            Dr. Leonard Banaszak</a>, where he fell in love with the natural sciences. Eventually, he graduated
-            with a degree in chemistry.
-        </p>
-
-        <p>
-            Jason set off for Ann Arbor, Michigan, in hopes of doing Great Scientific Things. During a brief and
-            undistinguished career as a bench scientist &mdash; he has what they call &ldquo;bad hands&rdquo; &mdash; he
-            worked his way through another two degrees at <a href="javascript:void(0)"
-                                                             onclick="popout('http://www.emich.edu')">
-            Eastern Michigan University</a>, including, crucially, one in Computer Science. Since those days, Jason has
-            happily been paid to do all sorts of fun and interesting things with computers, mostly of the
-            &ldquo;coding&rdquo; variety.
-        </p>
-    </div>
-
-</div>
-
-<div class="fl cb row-fluid span9 offset1 lead">
+    <img src="/app/img/jpn2.png" class="img-rounded img-polaroid span3 fl cl" style="margin-right:1em"
+         alt="Jason Nerothin"/>
 
     <p>
-        While in Michigan, Jason met Shelley, the woman who would become his wife and the mother of their children.
-        Three children and one cat have been added to the mix.
+        Jason was born in the mid-1970s, in rural mid-Minnesota, the first-born child of a physician and nurse.
+        A sister and brother came 2 and 5 years later on.
     </p>
 
     <p>
-        Jason has far more interests than time. Since graduating college, he's picked up a new hobby about once every
+        Jason matriculated to St.Olaf College where he pursued a number of interesting studies - music,
+        German, biology and - eventually - Chemistry.  After graduation, Jason set off for Ann Arbor, Michigan,
+        supporting his continued studies at <a href="javascript:void(0)" onclick="popout('http://www.emich.edu')">
+        Eastern Michigan University</a> with a short and undistinguished career as a bench scientist.
+    </p>
+
+    <p>
+        By the end of his twenties, Jason had attained another two degrees and gotten married to Shelley.
+        Crucially, he was being paid to do work with computers, mostly of the &ldquo;coding&rdquo; variety.
+    </p>
+
+    <p>
+        After a two-year stint in southern California and the addition of a child, the family relocated to Madison,
+        Wisconsin, where they were again granted the blessings of parenthood twice more.  A grey tabby - Whatserface -
+        rounds out the current mix.
+    </p>
+
+    <p>
+        Jason has far more interests than time.  Since graduating college, he's picked up a new hobby about once every
         other year: Cooking,
-        <a href="javascript:void(0)" onclick="popout('http://www.ruffedgrousesociety.org')">Ruffed Grouse</a> Hunting,
+        <a href="javascript:void(0)" onclick="popout('http://www.youtube.com/watch?v=F_eVhs9jWB4')">Ruffed Grouse
+            Hunting</a>,
         Philip Ward's <a href="javascript:void(0)"
                          onclick="popout('http://home.comcast.net/~netaylor1/philipward500.htm')">Lifetime Of
         Reading</a>,
         <a href="javascript:void(0)" onclick="popout('http://www.ford-trucks.com/forums/forum38/')">fixin&rsquo; old
             trucks</a>,
         <a href="javascript:void(0)"
-           onclick="popout('https://www.mytotalmoneymakeover.com/index.cfm?event=displayLobby')">gardening</a>,
+           onclick="popout('http://www.goinlupi.com')">gardening</a>,
         <a href="javascript:void(0)"
            onclick="popout('https://www.mytotalmoneymakeover.com/index.cfm?event=displayLobby')">money management</a>,
         and singing in the Church <a href="javascript:void(0)"
                                      onclick="popout('http://www.gslcwi.com/content.cfm?id=320')">choir</a> are all
         going concerns.
+    </p>
+
+    <p>
+        Shelley and Jason own and operate a software company, Superior Biomining LLC, from which Jason consults on
+        an independent basis.  However, Whatserface is rumored to be the one pulling all the strings.
     </p>
 
 </div>
