Grammar/spelling making better on bio.

--- a/app/partials/bio.html
+++ b/app/partials/bio.html
@@ -10,7 +10,7 @@
 
     <p>
         Jason matriculated to St.Olaf College where he pursued a number of interesting studies - music,
-        German, biology and - eventually - Chemistry.  After graduation, Jason set off for Ann Arbor, Michigan,
+        German, biology and - eventually - chemistry.  After graduation, Jason set off for Ann Arbor, Michigan,
         supporting his continued studies at <a href="javascript:void(0)" onclick="popout('http://www.emich.edu')">
         Eastern Michigan University</a> with a short and undistinguished career as a bench scientist.
     </p>
@@ -29,8 +29,8 @@
     <p>
         Jason has far more interests than time.  Since graduating college, he's picked up a new hobby about once every
         other year: Cooking,
-        <a href="javascript:void(0)" onclick="popout('http://www.youtube.com/watch?v=F_eVhs9jWB4')">Ruffed Grouse
-            Hunting</a>,
+        <a href="javascript:void(0)" onclick="popout('http://www.youtube.com/watch?v=F_eVhs9jWB4')">ruffed grouse
+            hunting</a>,
         Philip Ward's <a href="javascript:void(0)"
                          onclick="popout('http://home.comcast.net/~netaylor1/philipward500.htm')">Lifetime Of
         Reading</a>,
@@ -40,7 +40,7 @@
            onclick="popout('http://www.goinlupi.com')">gardening</a>,
         <a href="javascript:void(0)"
            onclick="popout('https://www.mytotalmoneymakeover.com/index.cfm?event=displayLobby')">money management</a>,
-        and singing in the Church <a href="javascript:void(0)"
+        and singing in his church <a href="javascript:void(0)"
                                      onclick="popout('http://www.gslcwi.com/content.cfm?id=320')">choir</a> are all
         going concerns.
     </p>
