one word change

--- a/app/partials/bio.html
+++ b/app/partials/bio.html
@@ -40,7 +40,7 @@
            onclick="popout('http://www.goinlupi.com')">gardening</a>,
         <a href="javascript:void(0)"
            onclick="popout('https://www.mytotalmoneymakeover.com/index.cfm?event=displayLobby')">money management</a>,
-        and singing in his church <a href="javascript:void(0)"
+        and singing in the church <a href="javascript:void(0)"
                                      onclick="popout('http://www.gslcwi.com/content.cfm?id=320')">choir</a> are all
         going concerns.
     </p>
